# resource-service

./: .env.example  .gitignore  Cargo.toml  README.md  compose.yml
init_db/: init.js
src/: app.rs  data_base.rs  db.rs  file_storage.rs  global_data.rs  main.rs  models.rs  server.rs
src/app/: helpers.rs  models.rs  permissions.rs  types.rs  util.rs
src/app/models/: brand.rs  category.rs  game.rs  product.rs
src/app/resolvers/: brand.rs  category.rs  game.rs  mod.rs  product.rs
src/models/: product.rs
src/server/: gp_middleware.rs  graphql_lifecycle.rs  middleware.rs
src/types/: mod.rs  request.rs
