[package]
name = "rust_mongo"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
mongodb = "2.7.0"
tokio = {version = "1.32.0" , features = ["full"]}
axum = { version = "0.6.0", features = ["headers"] }
async-graphql-axum = "6.0.7"
async-graphql = "6.0.7"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.1"