[package]
name = "resource-server"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
mongodb = "2.7.0"
tokio = {version = "1.32.0" , features = ["full"]}
async-graphql-axum = "7.0.0"
async-graphql = "7.0.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.1"
once_cell = "1.18.0"
axum = {version = "0.7.4" , features = ["http2"]}
thiserror = "1.0.56"
